--- a/style.css
+++ b/style.css
@@ -1,141 +1,7 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  padding: 20px;
-  background-color: rgb(16, 16, 16);
-  color: white;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.nav-list {
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  flex-direction: row;
-  gap: 20px;
-  margin: 15px;
-  font-size: 20px;
-}
-
-.nav-list-item a {
-  color: white;
-  text-decoration: none;
-  display: inline;
-}
-
-.nav-list-item a:hover {
-  color: #f1a601;
-}
-
-.header {
-  margin-bottom: 50px;
-}
-
-.subheader {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  flex-direction: row;
-  width: auto;
-}
-
-.name {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 50vw;
-  margin: 15px;
-}
-
-.picture {
-  margin-top: 30px;
-  border-radius: 20px;
-  box-shadow: -20px -30px #f1a601;
-}
-
-h1 {
-  color: #f1a601;
-  text-transform: uppercase;
-}
-
-h2 {
-  margin-bottom: 10px;
-}
-
-h3 {
-  color: #f1a601;
-  text-transform: uppercase;
-  font-size: 24px;
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.button {
-  width: 10vw;
-  text-align: center;
-  margin: 10px;
-  padding: 5px 15px 5px 15px;
-  background-color: black;
-  color: white;
-  border-radius: 20px;
-  border: 2px solid white;
-  min-width: 100px;
-}
-
-/* Subheader end */
-
-.interests {
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 50px;
-  gap: 20px;
-}
-
-.interests-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  gap: 20px;
-  list-style: none;
-}
-
-.interests-list-item {
-  background-color: gray;
-  border-radius: 30px;
-  padding: 5px 10px 5px 10px;
-}
-
-.skills-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  gap: 20px;
-  list-style: none;
-}
-
-.skills-list-item {
-  background-color: gray;
-  border-radius: 30px;
-  padding: 5px 10px 5px 10px;
-}
-
-#contact {
-  margin-bottom: 50px;
-  text-align: center;
-}
-
-.linkset {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  margin: 50px;
-}
-
-#aboutMe {
-  margin-bottom: 50px;
-}
+@import "/css/about-me.css";
+@import "/css/contact.css";
+@import "/css/cv.css";
+@import "/css/header.css";
+@import "/css/links.css";
+@import "/css/my-skills.css";
+@import "global.css";
